# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.31.11
	Martin Väth <martin at mvath.de>:
	- scripts: Fix getopts usage.
	- scripts: handle export Bourne shell compatible
	- fix typos in zsh completion. Thanks to longlene
	- fix various operator overloads
	- define some move operations not provided by defaults
	- remove git helpers; rely on https://github.com/vaeth/git-wrappers-mv

*eix-0.31.10
	Martin Väth <martin at mvath.de>:
	- Avoid redundant newlines in eix -t
	- Add --nowarn to eix and masked-packages
	- Print portage warnings only once, in particular in eix-test-obsolete:
	  https://bugs.gentoo.org/show_bug.cgi?id=593774
	- Always count empty lines for line numbers in errors/warnings
	- Print line numbers for warnings with bad category names
	- eix-sync: Prepend /etc/eix-sync.conf only once, see
	  https://github.com/vaeth/eix/issues/30
	- scripts: speed up ReadBoolean

*eix-0.31.9
	Martin Väth <martin at mvath.de>:
	- scripts: set -f in loops over lines:
	  https://bugs.gentoo.org/show_bug.cgi?id=591422
	- Improve yesno detection (0 or - is false)

*eix-0.31.8
	Martin Väth <martin at mvath.de>:
	- Important change: Add -u for all shell scripts.
	  This can trigger currently hidden bugs ("unbound variable" or
	  "parameter not set" indicate such bugs); please report them if you
	  encounter them. The hope is that in the long run, this step will help
	  to eliminate hidden bugs, although in the moment it can cause pain.
	- Thanks already for some such reports to:
	  Michał Bartoszkiewicz <mbartoszkiewicz at gmail.com>
	- Add etcat script to resemble somewhat etcat -v behaviour
	- New FORMAT_ETCAT and FORMAT_VERSION_ETCAT default variables
	  for etcat type output
	- Support colors in unquoted runtime variables
	- New attributes overlayname, overlay{plain,ver}name{,*}
	- Honour ebuild md5 whenever provided (e.g. by >=portage-2.3.1)
	- Make timestamp optional for assign method (e.g. for >=portage-2.3.1)
	- Honour TMPDIR as requested by POSIX