@@ -12,37 +12,9 @@
 
 #include <list>
 
+#include "eixTk/ptr_iterator.h"
+
 namespace eix {
-template<typename m_Iterator> inline static void delete_all(m_Iterator b, m_Iterator e);
-
-template<typename m_Iterator> inline static void delete_all(m_Iterator b, m_Iterator e) {
-	for(; b != e; ++b) {
-		delete *b;
-	}
-}
-
-/**
-An iterator type to iterate through a container containing pointers of the
-given data type. The special thing is the operator-> returns the same as the operator*.
-Taken from the obby-project (http://darcs.0x539.de/libobby) and extended.
-**/
-template<typename base_iterator> class ptr_iterator : public base_iterator {
-	public:
-		ptr_iterator() : base_iterator() {
-		}
-
-		explicit ptr_iterator(const base_iterator& iter) : base_iterator(iter) {
-		}
-
-		ptr_iterator& operator=(const base_iterator& iter) {
-			return static_cast<ptr_iterator&>( base_iterator::operator=(iter));
-		}
-
-		typename base_iterator::reference operator->() {
-			return *base_iterator::operator->();
-		}
-	};
-
 /**
 A list that only stores pointers to type
 **/
@@ -76,7 +48,8 @@ template<typename type> class ptr_list : public std::list<type*> {
 			delete_all(begin(), end());
 			clear();
 		}
-	};
+};
+
 }  // namespace eix
 
 #endif  // SRC_EIXTK_PTR_LIST_H_
