@@ -1,8 +1,9 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
-*eix-0.31.11
+*eix-0.32.0
 	Martin Väth <martin at mvath.de>:
-	- scripts: Fix getopts usage.
+	- new database is guaranteed to be alphabetically sorted
+	- scripts: Fix getopts usage
 	- scripts: handle export Bourne shell compatible
 	- fix typos in zsh completion. Thanks to longlene
 	- fix various operator overloads
